remove error from user.html and add config.py for OpenShift db

--- a/microblog/app/templates/user/user.html
+++ b/microblog/app/templates/user/user.html
@@ -22,12 +22,14 @@
         </div>
     </div>
     <div>
-        {% if user.id == g.user.id %}
-            <a class="btn btn-success" href="/user/edit">Edit</a>
-        {% elif not g.user.is_following(user) %}
-            <a class="btn btn-info" href="{{ url_for('follow', username=user.username) }}">Follow</a>
-        {% else %}
-            <a class="btn btn-danger" href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a>
+        {% if not g.user.is_anonymous %}
+            {% if user.id == g.user.id %}
+                <a class="btn btn-success" href="/user/edit">Edit</a>
+            {% elif not g.user.is_following(user) %}
+                <a class="btn btn-info" href="{{ url_for('follow', username=user.username) }}">Follow</a>
+            {% else %}
+                <a class="btn btn-danger" href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a>
+            {% endif %}
         {% endif %}
     </div>
     <hr>
