--- a/microblog/app/templates/post.html
+++ b/microblog/app/templates/post.html
@@ -2,7 +2,7 @@
     <img class="img-circle" src="{{ user.avatar(48) }}">
     <div class="post-body well well-sm">
         <div class="user">
-            <span class="username">{{ post.author.username }}</span> said <span
+            <a href="{{ url_for("user_profile", username=post.author.username) }}"><span class="username">{{ post.author.username }}</span></a> said <span
                 class="post-date">{{ momentjs(post.timestamp).fromNow() }}</span>:
         </div>
         <div class="content">
